// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`counts todo tests when inside of a \`describe.only\` 1`] = `
"PASS __tests__/only-todo.test.js
  with .only, should show 'passed', 'todo', 'todo'
    ✓ passing test
    ✎ todo todo test 1
    ✎ todo todo test 2

Test Suites: 1 passed, 1 total
Tests:       2 todo, 1 passed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /only-todo.test.js/i."
`;

exports[`shows error messages when called with invalid argument 1`] = `
"FAIL __tests__/todoNonString.test.js
  ● Test suite failed to run

    Todo must be called with only a description.

      6 |  */
      7 |
    > 8 | it.todo(() => {});
        |    ^
      9 |

      at Object.todo (__tests__/todoNonString.test.js:8:4)"
`;

exports[`shows error messages when called with multiple arguments 1`] = `
"FAIL __tests__/todoMultipleArgs.test.js
  ● Test suite failed to run

    Todo must be called with only a description.

      6 |  */
      7 |
    > 8 | it.todo('todo later', () => {});
        |    ^
      9 |

      at Object.todo (__tests__/todoMultipleArgs.test.js:8:4)"
`;

exports[`shows error messages when called with no arguments 1`] = `
"FAIL __tests__/todoNoArgs.test.js
  ● Test suite failed to run

    Todo must be called with only a description.

      6 |  */
      7 |
    > 8 | it.todo();
        |    ^
      9 |

      at Object.todo (__tests__/todoNoArgs.test.js:8:4)"
`;

exports[`shows todo messages when in verbose mode 1`] = `
"PASS __tests__/verbose.test.js
  todos in verbose reporter
    ✎ todo this
    ✎ todo should
    ✎ todo work"
`;

exports[`works with all statuses 1`] = `
"FAIL __tests__/statuses.test.js
  ✓ passes
  ✕ fails
  ○ skipped skips
  ✎ todo todo

  ● fails

    expect(received).toBe(expected) // Object.is equality

    Expected: 101
    Received: 10

      11 |
      12 | it('fails', () => {
    > 13 |   expect(10).toBe(101);
         |              ^
      14 | });
      15 |
      16 | it.skip('skips', () => {

      at Object.toBe (__tests__/statuses.test.js:13:14)"
`;
